@@ -9,6 +9,7 @@ Vaclav Slavik <vaclav.slavik@matfyz.cz>
 ----------
 
 Artur Frysiak <wiget@users.sourceforge.net>
+Stefan Neis <Stefan.Neis@t-online.de>
 
 
  Reused code:
